# Whatsapp2Telegram

./: .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
tests/: telegram_bot_test.py  whatsapp_test.py
whatsapp2telegram/: main.py  telegram_bot.py  whatsapp.py
